legacy/cli/tests/snapshots/run_deno_test__deno__handles_process_exit_code_nonzero.snap
---
source: crates/cli/tests/run_deno_test.rs
expression: assert.output()
---
▪▪▪▪ deno:exitCodeNonZero
stdout
▪▪▪▪ deno:exitCodeNonZero (100ms)
stderr
Error: task_runner::run_failed

  × Task deno:exitCodeNonZero failed to run.
  ╰─▶ Process deno failed with a 1 exit code.
